# cv-xy

./: CMakeLists.txt
void funckia spojeni so starym cvikom/: CMakeLists.txt  void funckia spojeni so starym cvikom.cpp  void funckia spojeni so starym cvikom.h
