# CMakeList.txt : CMake project for void funckia spojeni so starym cvikom, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "void funckia spojeni so starym cvikom.cpp" "void funckia spojeni so starym cvikom.h")

# TODO: Add tests and install targets if needed.
